@@ -166,7 +166,7 @@ public class MemoryGroupByAggregationNullsTest {
     aggregate.agg[0] = null;
     transform.setAllNullsAreZero(true);
     Object[] row = transform.getAggregateResult(aggregate);
-    Assert.assertEquals("Returns 0 if aggregation is null", new Long(0), row[0]);
+    Assert.assertEquals("Returns 0 if aggregation is null", Long.valueOf(0), row[0]);
   }
 
   @Test
